Fully functional unresponsive

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="src/assets/cryptocurrency-f6026a2012a14aaa9ef8a1c277fde0f7.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CryptoDashboard</title>
+    <title>CryptoControl</title>
   </head>
   <body>
     <div id="root"></div>
